<resources>
    <string name="app_name">Hw9</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="facebook_app_id">681988351911495</string>
    <string name="TopRated">top_rated_or_not</string>
    <string name="TitleUserName">User Name</string>
    <string name="TitleTopRated">Top Rated</string>
    <string name="TitleStoreName">Store</string>
    <string name="TitleShipType">Shipping Type</string>
    <string name="TitleShipLoc">Shipping Locations</string>
    <string name="TitleRetAcpt">Returns Accepted</string>
    <string name="TitlePosFdbk">Positive Feedback</string>
    <string name="TitleFdbkScore">Feedback Score</string>
    <string name="TitleFdbkRating">Feedback Rating</string>
    <string name="TitleExpdShip">Expedited Shipping</string>
    <string name="TitleCondition">Condition</string>
    <string name="TitleCategoryName">Category Name</string>
    <string name="TitleBuyingFormat">Buying Format</string>
    <string name="Title1DayShip">One Day Shipping</string>
    <string name="TitleHdlTime">Handling Time</string>
    <string name="SortBy">Sort By</string>
    <string name="FbShare">facebook share</string>
    <string name="Keyword">Keyword</string>
    <string name="MainActivityName">EbaySearch</string>
    <string name="PriceFrom">Price From</string>
    <string name="PriceTo">Price To</string>
    <string name="Search">SEARCH</string>
    <string name="SellerInfoBtn">SELLER</string>
    <string name="ShipInfoBtn">SHIPPING</string>
    <string name="eBaySearchTitle">eBay Search</string>
    <string name="Empty"> </string>
    <string name="BasicInfoBtn">BASIC INFO</string>
    <string name="BuyItNow">Buy Now</string>
    <string name="Clear">CLEAR</string>
</resources>
