<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu61723.usc.cs_server.hw9.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/eBaySearchTitle"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/com_facebook_blue"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/Keyword"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/keywords"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="7"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/PriceFrom"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/priceFrom"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="7"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/PriceTo"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/priceTo"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="7"
                android:editable="true"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/SortBy"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sortBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="7"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" android:layout_marginTop="36dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/Empty" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="7"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clrBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/Clear" />

                <Button
                    android:id="@+id/srchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/Search" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/errArea"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/errMsg"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/Empty"
                android:textAlignment="center"
                android:textColor="#ffff0000" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
